test_suite/tests/ui/with-variant/skip_ser_struct_field_if.stderr
error: variant `Struct` cannot have both #[serde(serialize_with)] and a field `f1` marked with #[serde(skip_serializing_if)]
  --> $DIR/skip_ser_struct_field_if.rs:6:5
   |
6  | /     #[serde(serialize_with = "serialize_some_newtype_variant")]
7  | |     Struct {
8  | |         #[serde(skip_serializing_if = "always")]
9  | |         f1: String,
10 | |         f2: u8,
11 | |     },
   | |_____^

error: aborting due to previous error

